<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background"
    android:weightSum="3">

    <View android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/draw" />

        <Button
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help" />
    </LinearLayout>


</LinearLayout>